; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_dependencies.c_GetDependencyCreateDDLCommands.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_dependencies.c_GetDependencyCreateDDLCommands.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@RELKIND_COMPOSITE_TYPE = common dso_local global i32 0, align 4
@NIL = common dso_local global i32* null, align 8
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"unsupported object %s for distribution by citus\00", align 1
@.str.1 = private unnamed_addr constant [61 x i8] c"citus tries to recreate an unsupported object on its workers\00", align 1
@.str.2 = private unnamed_addr constant [52 x i8] c"please report a bug as this should not be happening\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_7__*)* @GetDependencyCreateDDLCommands to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @GetDependencyCreateDDLCommands(%struct.TYPE_7__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %6 = call i32 @getObjectClass(%struct.TYPE_7__* %5)
  switch i32 %6, label %35 [
    i32 131, label %7
    i32 130, label %17
    i32 129, label %20
    i32 128, label %32
  ]

7:                                                ; preds = %1
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @get_rel_relkind(i32 %10)
  %12 = load i32, i32* @RELKIND_COMPOSITE_TYPE, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %7
  %15 = load i32*, i32** @NIL, align 8
  store i32* %15, i32** %2, align 8
  br label %45

16:                                               ; preds = %7
  br label %36

17:                                               ; preds = %1
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %19 = call i32* @CreateFunctionDDLCommandsIdempotent(%struct.TYPE_7__* %18)
  store i32* %19, i32** %2, align 8
  br label %45

20:                                               ; preds = %1
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i8* @CreateSchemaDDLCommand(i32 %23)
  store i8* %24, i8** %4, align 8
  %25 = load i8*, i8** %4, align 8
  %26 = icmp eq i8* %25, null
  br i1 %26, label %27, label %29

27:                                               ; preds = %20
  %28 = load i32*, i32** @NIL, align 8
  store i32* %28, i32** %2, align 8
  br label %45

29:                                               ; preds = %20
  %30 = load i8*, i8** %4, align 8
  %31 = call i32* @list_make1(i8* %30)
  store i32* %31, i32** %2, align 8
  br label %45

32:                                               ; preds = %1
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %34 = call i32* @CreateTypeDDLCommandsIdempotent(%struct.TYPE_7__* %33)
  store i32* %34, i32** %2, align 8
  br label %45

35:                                               ; preds = %1
  br label %36

36:                                               ; preds = %35, %16
  %37 = call i32 @Assert(i32 0)
  %38 = load i32, i32* @ERROR, align 4
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %40 = call i32 @getObjectTypeDescription(%struct.TYPE_7__* %39)
  %41 = call i32 @errmsg(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32 %40)
  %42 = call i32 @errdetail(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.1, i64 0, i64 0))
  %43 = call i32 @errhint(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.2, i64 0, i64 0))
  %44 = call i32 @ereport(i32 %38, i32 %43)
  br label %45

45:                                               ; preds = %36, %32, %29, %27, %17, %14
  %46 = load i32*, i32** %2, align 8
  ret i32* %46
}

declare dso_local i32 @getObjectClass(%struct.TYPE_7__*) #1

declare dso_local i32 @get_rel_relkind(i32) #1

declare dso_local i32* @CreateFunctionDDLCommandsIdempotent(%struct.TYPE_7__*) #1

declare dso_local i8* @CreateSchemaDDLCommand(i32) #1

declare dso_local i32* @list_make1(i8*) #1

declare dso_local i32* @CreateTypeDDLCommandsIdempotent(%struct.TYPE_7__*) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @getObjectTypeDescription(%struct.TYPE_7__*) #1

declare dso_local i32 @errdetail(i8*) #1

declare dso_local i32 @errhint(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
